# pc-setup

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  i3blocks-setup.md  pyproject.toml  quick-setup.sh
K8S/: Vagrantfile  requirements.txt
K8S/kubernetes-setup/: Vagrantfile  master-playbook.yml  node-playbook.yml
i3/: autolock.sh  config  lock_and_turn_off_screen.sh
i3/my-i3blocks/: checkupdates  i3blocks.conf  shutdown_menu
i3/my-i3blocks/bandwidth2-source/: .gitignore
setup-using-ansible/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
setup-using-ansible/tests/: Vagrantfile
