[tool.poetry]
name = "pc-setup"
version = "0.1.0"
description = "Setting up a new PC"
authors = ["isuru <isuru@isuru.ca>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
